-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: port-stage-ppc-aix
-
Component/s: hotspot
-
None
-
master
-
ppc
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8033044 | 9 | Goetz Lindenmaier | P4 | Resolved | Fixed | b04 |
| JDK-8045348 | 8u25 | Goetz Lindenmaier | P4 | Resolved | Fixed | b01 |
| JDK-8038546 | 8u20 | Goetz Lindenmaier | P4 | Resolved | Fixed | b08 |
| JDK-8053455 | emb-8u26 | Goetz Lindenmaier | P4 | Resolved | Fixed | b17 |
Add support for replacement variable $$CondRegister in adlc.
Also remove a small change added in 8028767 and not needed
any more.
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/050a78b84b0e/ppc_patches/0219-more_basic_C2_adaptions_for_ppc.patch
Also remove a small change added in 8028767 and not needed
any more.
---------------------------------
This is preparation for PPC64 integration: http://openjdk.java.net/jeps/175
This and following ppc64 changes will go into staging repository first and tested there: http://hg.openjdk.java.net/ppc-aix-port/stage/
http://hg.openjdk.java.net/ppc-aix-port/jdk8/hotspot/file/050a78b84b0e/ppc_patches/0219-more_basic_C2_adaptions_for_ppc.patch
- backported by
-
JDK-8033044 PPC64: (part 219): adl replacement variable CondRegister
-
- Resolved
-
-
JDK-8038546 PPC64: (part 219): adl replacement variable CondRegister
-
- Resolved
-
-
JDK-8045348 PPC64: (part 219): adl replacement variable CondRegister
-
- Resolved
-
-
JDK-8053455 PPC64: (part 219): adl replacement variable CondRegister
-
- Resolved
-