8029888: PPC64: (part 219): adl replacement variable CondRegister

Add support for replacement variable CondRegister in adlc.

Reviewed-by: kvn